<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.perspikyliator.mypracticeproject.DetailActivity">

    <LinearLayout
        android:id="@+id/ll_AD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/cream_white"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle_AD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/pink"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCity_AD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvAddress_AD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textColor="@color/blue" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/cream_white"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/tv1_cv2_AD"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cash_name" />

            <TextView
                android:id="@+id/tv2_cv2_AD"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/cash_status" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/cream_white"
            card_view:cardCornerRadius="4dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_AD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:scrollbars="vertical" />


        </android.support.v7.widget.CardView>

    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fam_AD"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        fab:fab_addButtonColorNormal="@color/pink"
        fab:fab_addButtonColorPressed="@color/blue"
        fab:fab_labelStyle="@style/menu_labels">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMap_AD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            fab:fab_colorNormal="@color/dark_white"
            fab:fab_colorPressed="@color/light_gray"
            fab:fab_icon="@drawable/ic_map"
            fab:fab_title="@string/map" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabLink_AD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            fab:fab_colorNormal="@color/dark_white"
            fab:fab_colorPressed="@color/light_gray"
            fab:fab_icon="@drawable/ic_link"
            fab:fab_title="@string/link" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPhone_AD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            fab:fab_colorNormal="@color/dark_white"
            fab:fab_colorPressed="@color/light_gray"
            fab:fab_icon="@drawable/ic_phone"
            fab:fab_title="@string/phone" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>
